--- a/style/index.css
+++ b/style/index.css
@@ -10,6 +10,7 @@ html {
 
 * {
     font-family: inherit;
+    font-size: inherit;
 }
 
 body {
@@ -24,7 +25,7 @@ body {
 }
 
 button {
-    cursor: url("/assets/v2/cropped/Cursor_Pointer_x4.png") 4 4, pointer;
+    cursor: url("/assets/v2/cropped/Cursor_Pointer_x4.png") 8 4, pointer;
     height: fit-content;
 }
 
@@ -36,7 +37,7 @@ h2 {
     font-size: 32px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
     margin-block-end: 0px;
     margin-block-start: 0px;
     margin: 16px;
@@ -75,17 +76,16 @@ div.terrain {
     width: 384px;
     height: 384px;
     box-sizing: content-box;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    justify-items: center;
     align-items: center;
-    justify-content: start;
+    grid-template-columns: repeat(6, 64px);
+    grid-template-rows: repeat(6, 64px);
     border-image-slice: 64 64 64 64 fill;
     border-image-source: url("/assets/v2/cropped/Wall_Full_x4.png");
     border-width: 64px 64px 64px 64px;
     border-style: solid;
     position: relative;
-    padding: 32px;
-    padding-bottom: 64px;
 }
 
 div.terrain::before {
@@ -98,10 +98,12 @@ div.terrain::before {
     height: 64px;
     background-color: var(--lightest);
     position: absolute;
-    top: 0px;
+    top: 64px;
     left: 100%;
     transform: scaleX(-1);
 }
+
+
 
 .button-pusher {
     display: flex;
@@ -117,4 +119,51 @@ div.terrain::before {
 
 .align-left {
     align-self: start;
+}
+
+#title {
+    grid-column: 3 / 7;
+    grid-row: 3;
+}
+#author {
+    grid-column: 1 / 3;
+    grid-row: 4;
+}
+
+.block {
+    position: relative;
+    left: 0px;
+    top: 0px;
+    transition: 1s ease;
+    box-shadow: 0px 0px 0px 100px transparent;
+}
+
+.vertical {
+    grid-row: 1 / 7;
+}
+
+.horizontal {
+    grid-column: 1 / 7;
+}
+
+.horizontal[row="1"] { grid-row: 1; }
+.horizontal[row="2"] { grid-row: 2; }
+.horizontal[row="3"] { grid-row: 3; }
+.horizontal[row="4"] { grid-row: 4; }
+.horizontal[row="5"] { grid-row: 5; }
+.horizontal[row="6"] { grid-row: 6; }
+.vertical[col="1"] { grid-column: 1; }
+.vertical[col="2"] { grid-column: 2; }
+.vertical[col="3"] { grid-column: 3; }
+.vertical[col="4"] { grid-column: 4; }
+.vertical[col="5"] { grid-column: 5; }
+.vertical[col="6"] { grid-column: 6; }
+
+div.terrain:has(#start:active) #main-block {
+    left: calc(6 * 64px + 50vh);
+}
+
+div.terrain img {
+    align-self: start;
+    justify-self: start;
 }
